public enum TariffType {
    LOW, MEDIUM, HIGH
}
